# 24hourclock

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
src/: TzApp.tsx  app.rs  main.rs  main.tsx
src/components/: center_display.rs  clock.rs  clock_segment.rs  controls.rs  info_panels.rs  mod.rs  now_highlight.rs  slot_detail.rs
src/modules/: geometry.rs  mod.rs  themes.rs  timezone.rs  timezone_db.rs  types.rs
src/styles/: main.css
